--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
         - moodle-plugin-ci phplint
       # - moodle-plugin-ci phpcpd
         - moodle-plugin-ci phpmd
-      # - moodle-plugin-ci codechecker
+        - moodle-plugin-ci codechecker
         - moodle-plugin-ci savepoints
       # - moodle-plugin-ci mustache
         - moodle-plugin-ci grunt
